Remove excess (opened) tabs restriction; fix overflow bug.

--- a/css/chrome-tabs.styl
+++ b/css/chrome-tabs.styl
@@ -49,10 +49,6 @@ activeTabBackgroundColor = #fff
     overflow hidden
     margin-right 5px
 
-    &::-webkit-scrollbar
-      width 10px;
-
-
   .chrome-tab
     position absolute
     left 0
